syntax = "proto3";

import "common.proto";

// Interface exported by the server.
service BondsmithRPC {
    //Join: argument is a set of mappings from unique, non-zero replica group identifiers (GIDs) to lists of radiants
    //In response, a new ConfigSummary is sent out (via multicast?) that redistributes all the existing shards
    //across all the currently joined groups
    rpc Join(JoinGroup) returns (ConfigSummary) {}
    rpc Leave(LeaveGroup) returns (ConfigSummary){}

    rpc GetCurrentConfig(ConfigId) returns (ConfigSummary){}
    rpc MoveShardRequest(ShardMoveRequest) returns (ShardMoveRequestResponse){}
    rpc JoinSystem(Radiant)returns (ConfigSummary){}
    rpc LeaveSystem(Radiant)returns (ConfigSummary){}
}
